--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "unocss": "^66.1.0-beta.7",
     "vite": "^5.0.0"
   },
+  "engines": {
+    "node": ">=18.20.7"
+  },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
