--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "vite": "^5.0.0"
   },
   "engines": {
-    "node": ">=18.20.7"
+    "node": ">=20.19.0"
+  },
+  "volta": {
+    "node": "20.19.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
