--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "prettier-plugin-svelte": "^3.3.3",
     "svelte": "^4.2.19",
     "svelte-check": "^4.0.0",
-    "unocss": "^66.1.0-beta.7",
+    "unocss": "^66.0.0",
     "vite": "^5.0.0"
   },
   "engines": {
